--- a/app/src/main/res/layout/activity_vip_benefits.xml
+++ b/app/src/main/res/layout/activity_vip_benefits.xml
@@ -1,99 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="#0f00f0">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ivBack"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="13dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/ic_back_white"/>
-
-    <TextView
+    <View
         android:layout_width="match_parent"
-        android:layout_height="26dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:text="My VIP Benefits"/>
+        android:layout_height="221dp"
+        android:background="@drawable/bg_vip_top"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivBack"
-        android:layout_gravity="right"
-        android:layout_marginTop="5dp"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="6dp"
-        android:fontFamily="@font/helvetica_bold"
-        android:textSize="14sp"
-        android:textColor="@color/white"
-        android:text="growth value"/>
-    
-    <ImageView
-        android:id="@+id/ivProfile"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="14dp"
-        app:layout_constraintTop_toBottomOf="@+id/ivBack"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/tvUserName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/ivProfile"
-        app:layout_constraintTop_toTopOf="@+id/ivProfile"
-        android:layout_marginTop="3dp"
-        android:layout_marginStart="8dp"
-        android:text="oliver.lee_888"
-        android:fontFamily="@font/helvetica_bold"
-        android:textSize="18sp"
-        android:textColor="@color/color_FFE6B3"/>
-    
-    <ImageView
-        android:id="@+id/ivLVTips"
-        android:layout_width="64dp"
-        android:layout_height="20dp"
-        app:layout_constraintStart_toStartOf="@+id/tvUserName"
-        app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
-        android:layout_marginBottom="3dp"
-        android:src="@drawable/ic_vip_tips_10"/>
-
-    <TextView
-        android:id="@+id/tvId"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        app:layout_constraintStart_toEndOf="@+id/ivLVTips"
-        app:layout_constraintTop_toTopOf="@+id/ivLVTips"
-        android:layout_marginStart="4dp"
-        android:gravity="center_vertical"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:text="ID: 88888888"
-        />
-
-    <LinearLayout
-        android:id="@+id/llBottom"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="13dp"
+            android:src="@drawable/ic_back_white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="26dp"
+            android:gravity="center"
+            android:text="My VIP Benefits"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvGrowth"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/helvetica_bold"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
+            android:text="growth value"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivBack" />
+
+        <ImageView
+            android:id="@+id/ivProfile"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivBack" />
+
+        <TextView
+            android:id="@+id/tvUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="3dp"
+            android:fontFamily="@font/helvetica_bold"
+            android:text="oliver.lee_888"
+            android:textColor="@color/color_FFE6B3"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@+id/ivProfile"
+            app:layout_constraintTop_toTopOf="@+id/ivProfile" />
+
+        <ImageView
+            android:id="@+id/ivLVTips"
+            android:layout_width="64dp"
+            android:layout_height="20dp"
+            android:layout_marginBottom="3dp"
+            android:src="@drawable/ic_vip_lv_tag10"
+            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
+            app:layout_constraintStart_toStartOf="@+id/tvUserName" />
+
+        <TextView
+            android:id="@+id/tvId"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:gravity="center_vertical"
+            android:text="ID: 88888888"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintStart_toEndOf="@+id/ivLVTips"
+            app:layout_constraintTop_toTopOf="@+id/ivLVTips" />
+
+        <LinearLayout
+            android:id="@+id/llBottom"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivProfile">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcvVipCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:paddingStart="2dp" />
+
+            <androidx.core.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12dp"
+                        android:text="VIP 6 Benefits"
+                        android:textColor="@color/color_0D2245"
+                        android:textSize="16sp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rcvActivatedBenefits"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="12dp"
+                        android:text="VIP 6 Benefits"
+                        android:textColor="@color/color_0D2245"
+                        android:textSize="16sp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rcvUnactivatedBenefits"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="90dp"
+                        android:clipToPadding="false"
+                        android:paddingStart="4dp" />
+
+                </LinearLayout>
+
+            </androidx.core.widget.NestedScrollView>
 
 
+        </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <FrameLayout
+            android:id="@+id/frDetail"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="VIP details"
+                android:textColor="@color/white"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center_vertical|right"
+                android:layout_marginEnd="34dp"
+                android:src="@drawable/ic_vip_details" />
+
+        </FrameLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
