--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -387,7 +387,11 @@
     <color name="color_99F1F5F9">#99F1F5F9</color>
     <color name="color_333A4C">#333A4C</color>
     <color name="color_FFE6B3">#FFE6B3</color>
-
+    <color name="color_ff541b">#ff541b</color>
+    <color name="color_e91217">#e91217</color>
+    <color name="color_F1F4FC">#F1F4FC</color>
+    <color name="color_5182FF">#5182FF</color>
+    <color name="color_0029FF">#0029FF</color>
 
     <color name="color_31D089">#31D089</color>
     <color name="color_F3F7FD">#F3F7FD</color>
